--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 	},
 	"dependencies": {
 		"leaflet": "^1.6.0",
+		"promise-polyfill": "^8.1.3",
 		"svelte": "^3.24.0",
-		"throttle-debounce": "^2.2.1"
+		"throttle-debounce": "^2.2.1",
+		"whatwg-fetch": "^3.2.0"
 	}
 }
