--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"test": "aunty test"
 	},
 	"devDependencies": {
-		"@abcnews/aunty": "^10.9.5",
+		"@abcnews/aunty": "^11.0.0",
 		"@testing-library/svelte": "^3.0.0",
 		"sass": "^1.26.10"
 	},
 	"dependencies": {
+		"@types/leaflet": "^1.5.17",
+		"@types/throttle-debounce": "^2.1.0",
 		"leaflet": "^1.6.0",
 		"promise-polyfill": "^8.1.3",
 		"svelte": "^3.24.0",
