--- a/package.json
+++ b/package.json
@@ -1,31 +1,43 @@
 {
-	"name": "radius-from",
-	"version": "1.0.2",
-	"description": "A project generated from aunty's svelte project template.",
-	"license": "MIT",
-	"private": true,
-	"contributors": [
-		"Simon Elvery <simon@elvery.net>"
-	],
-	"aunty": {
-		"type": "svelte"
-	},
-	"scripts": {
-		"start": "aunty serve",
-		"test": "aunty test"
-	},
-	"devDependencies": {
-		"@abcnews/aunty": "^11.0.0",
-		"@testing-library/svelte": "^3.0.0",
-		"sass": "^1.26.10"
-	},
-	"dependencies": {
-		"@types/leaflet": "^1.5.17",
-		"@types/throttle-debounce": "^2.1.0",
-		"leaflet": "^1.6.0",
-		"promise-polyfill": "^8.1.3",
-		"svelte": "^3.24.0",
-		"throttle-debounce": "^2.2.1",
-		"whatwg-fetch": "^3.2.0"
-	}
+  "name": "radius-from",
+  "version": "1.0.2",
+  "description": "A project generated from aunty's svelte project template.",
+  "license": "MIT",
+  "private": true,
+  "contributors": [
+    "Simon Elvery <simon@elvery.net>"
+  ],
+  "abc": {
+    "css": {
+      "libraryDir": "./node_modules/@abcaustralia/nucleus/css",
+      "logVariables": "false"
+    }
+  },
+  "aunty": {
+    "type": "svelte"
+  },
+  "scripts": {
+    "start": "aunty serve",
+    "test": "aunty test"
+  },
+  "devDependencies": {
+    "@abcnews/aunty": "^11.1.1",
+    "@testing-library/svelte": "^3.0.0",
+    "sass": "^1.26.10"
+  },
+  "dependencies": {
+    "@abcaustralia/nucleus": "^1.1.0",
+    "@abcaustralia/postcss-config": "^3.5.0",
+    "@types/leaflet": "^1.5.17",
+    "@types/throttle-debounce": "^2.1.0",
+    "leaflet": "^1.6.0",
+    "postcss-loader": "^3.0.0",
+    "promise-polyfill": "^8.1.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "svelte": "^3.24.0",
+    "svelte-react": "^1.0.0",
+    "throttle-debounce": "^2.2.1",
+    "whatwg-fetch": "^3.2.0"
+  }
 }
